components/about/about.sass
.about
  margin-top: 12vh
  display: flex
  flex-direction: column
  align-items: center
  justify-content: flex-start

.about__header
  display: none

.profile
  display: flex
  align-items: flex-start
  justify-content: center
  margin-bottom: $spacing-60

.profile:nth-of-type(even)
  flex-direction: row-reverse

  .profile__image
    margin-left: $spacing-60

.profile__frame
  overflow: hidden
  transform: scaleY(0)
  visibility: hidden
  margin-right: $spacing-60
  transition: transform 0.3s, visibility 0.3s

.profile__frame--reveal
  transform: scaleY(1)
  visibility: visible

.profile__image
  width: 100%
  height: 100%
  object-fit: cover

.profile__info
  display: flex
  flex-direction: column
  align-items: flex-start
  justify-content: flex-start

.profile__name
  margin-bottom: $spacing-50
  +font-primary
  +font-weight-bold
  font-size: $profile-name-font-size
  color: $profile-name-font-color

.profile__about
  +font-secondary
  +font-weight-regular
  $font-size: $profile-about-font-size
  color: $profile-about-font-color

